# vv_hgvs

./: .gitignore  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
doc/: conf.py  key_concepts.rst  quick_start.rst
hgvs/: assemblymapper.py  intervalmapper.py  parser.py  transcriptmapper.py  variantmapper.py
misc/: refalt-repr-examples.py  replace-license  samtools-bug.sh
misc/495-projection-at-discrepancies/: run-tests
misc/bisectors/: 383-c_to_p-error-with-del  aarefalt-ref_n.py
sbin/: cpu-info  makefile-extract-documentation  test-runner
tests/: .gitignore  conftest.py  test_clinvar.py  test_hgvs_alignmentmapper.py  test_hgvs_alignmentmapper_ens.py  test_hgvs_assemblymapper.py  test_hgvs_assemblymapper_ens.py  test_hgvs_dataproviders_uta.py  test_hgvs_edit.py  test_hgvs_extras_babelfish.py  test_hgvs_geneinfo.py  test_hgvs_grammar.py  test_hgvs_grammar_full.py  test_hgvs_hgvsposition.py  test_hgvs_location.py  test_hgvs_normalizer.py  test_hgvs_parser.py  test_hgvs_posedit.py  test_hgvs_projector.py  test_hgvs_selenocysteine.py  test_hgvs_sequencevariant.py  test_hgvs_validator.py  test_hgvs_variantmapper.py  test_hgvs_variantmapper_cp_altseqbuilder.py  test_hgvs_variantmapper_cp_real.py  test_hgvs_variantmapper_cp_sanity.py  test_hgvs_variantmapper_gcp.py  test_hgvs_variantmapper_near_discrepancies.py  test_issues_02xx.py  test_issues_03xx.py  test_issues_04xx.py  test_issues_05xx.py
vvhgvs/: __init__.py  alignmentmapper.py  assemblymapper.py  config.py  easy.py  edit.py  enums.py  exceptions.py  intervalmapper.py  location.py  normalizer.py  parser.py  posedit.py  projector.py  sequencevariant.py  shell.py  transcriptmapper.py  validator.py  variantmapper.py
(+33 files in other folders)
